# AutonomousAndMobileRobotics

./: .gitignore  Collegamento a Corso: Autonomous and Mobile Robotics M | Virtuale | A.A. 2024-2025.desktop  Collegamento a Corso: Autonomous and Mobile Robotics M | Virtuale | A.A. 2025-2026.desktop  README.md  sourceEnv.sh  sourceFastRos.sh
Lab Slides/: 00 Collegamento a Installation — ROS 2 Documentation: Humble documentation.desktop  04 Tiago with Aruco&Grasping
ros2pythonvenv/src/lab1workspace/install/: local_setup.sh  setup.sh
ros2pythonvenv/src/lab1workspace/log/: latest_build  latest_list
ros2pythonvenv/src/lab1workspace/notes/: 00 README.txt  rosdep_override.yaml
ros2pythonvenv/src/lab2workspace/install/: local_setup.sh  setup.sh
ros2pythonvenv/src/lab2workspace/log/: latest_build
ros2pythonvenv/src/lab2workspace/notes/: 00 README.txt
ros2pythonvenv/src/lab2workspace/src/cpp_pubsub/: CMakeLists.txt
ros2pythonvenv/src/lab2workspace/src/my_cmake_package/: LICENSE
ros2pythonvenv/src/lab2workspace/src/my_python_package/: package.xml  setup.py
ros2pythonvenv/src/lab2workspace/src/py_pubsub/: package.xml  setup.py
ros2pythonvenv/src/lab3workspace/data/: map.pgm  map.yaml
ros2pythonvenv/src/lab3workspace/notes/: 01 FOUNDAMENTAL source in order to use gazebo within ROS2  02 HOW TO: rosdep on Mint  03 Used Repo for TurtleBOT3
ros2pythonvenv/src/lab3workspace/src/autonomous_exploration/: setup.py
ros2pythonvenv/src/lab4workspace/install/: local_setup.sh  setup.sh
ros2pythonvenv/src/lab4workspace/log/: latest_build
ros2pythonvenv/src/lab4workspace/src/autonomous_exploration/: package.xml
ros2pythonvenv/src/lab5workspace/data/: goals.txt
ros2pythonvenv/src/lab5workspace/install/: local_setup.sh  setup.sh
ros2pythonvenv/src/lab5workspace/log/: latest_build
ros2pythonvenv/src/lab5workspace/src/autonomous_localization/: setup.py
ros2pythonvenv/src/lab5workspace/src/navigation_from_text/: setup.cfg  setup.py
ros2pythonvenv/src/lab7workspace/: buildTiago.sh  sourceTiago.sh
ros2pythonvenv/src/lab7workspace/notes/: 01 How To Prepare Tiago Environment
ros2pythonvenv/src/lab7workspace/ros2workspace/install/: local_setup.sh  setup.sh
ros2pythonvenv/src/lab7workspace/ros2workspace/log/: latest_build
ros2pythonvenv/src/lab7workspace/src/tiagobasics/: setup.py
ros2pythonvenv/src/lab7workspace/tiagoworkspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  (+1 more)
ros2pythonvenv/src/lab7workspace/workspace/src/arucobasic/: package.xml  setup.cfg  setup.py
ros2pythonvenv/src/lab7workspace/workspace/src/arucobasic/arucobasic/: 1_aruco_tf_subscriber.py  2_aruco_grasp_pose_broadcaster.py  3_move_arm.py
ros2pythonvenv/src/lab7workspace/workspace/src/arucobasic/launch/: single.launch.py
(+300 files in other folders)
